<resources>
    <string name="app_name">VehicleATM</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>


    <string name="auth_failed">Authentication failed</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_f_name">First Name</string>
    <string name="prompt_l_name">Last Name</string>
    <string name="prompt_flat_no">Flat No/ Plot No</string>
    <string name="prompt_mobile_no">Mobile Numbers</string>
    <string name="prompt_vehicles">Vehicles</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="msg1">DO NOT APPLY ANY LAYOUT TO THIS SCREEN, IN FUTURE THIS SCREEN WILL REPLACE MAIN-ACTIVITY</string>
    <string name="title_activity_registration">Registration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="textview">TextView</string>
    <!-- FOR REGISTRATION AND LOGIN -->
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="flat">FLAT NO</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_uid">Firebase UID</string>
    <string name="vehicle_no">VEHICLE NO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_fragment">USER_PROFILE_FRAGMENT</string>
    <string name="title_activity_main2">RecyclerViewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="register_vehicle">REGISTER VEHICLE</string>
    <string name="register2">REGISTER</string>
    <string name="enter_the_number">ENTER THE NUMBER</string>
    <string name="model">MODEL</string>
    <string name="enter_the_description_of_occasion">ENTER THE DESCRIPTION OF OCCASION</string>
    <string name="enter_contact_no">ENTER CONTACT NO.</string>
    <string name="enter_guest_name">ENTER GUEST NAME</string>
    <string name="title_activity_view_vehicles">ViewVehiclesActivity</string>
    <string name="login">LOGIN</string>



    <string name="no_selection">No Selected</string>
</resources>
